--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<button class="operators" value="/" id="/" onclick="highlightOperator(event), takeValue(this.value)">/</button>
 			
 			<button id="clearButton" value="0" onclick="clearDisplay(document.getElementById('clearButton').value)">Clear</button>
-			<button id="equalButton" value="=" onclick="calculateResult()">=</button>
+			<button id="equalButton" value="=" onclick="calculateResult('=')">=</button>
 
 		</div>
 	</body>
