--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>Calculator Project</title>
 		<meta name="autor" content="Cristian Jiménez">
 		<link rel="icon" href="Resources/CalculatorIcon.png">
-		<link href="Styles/calculator.css" rel="stylesheet" type="text/css">
+		<link href="src/Styles/calculator.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<script src="Scripts/calculator.js"></script>
+		<script src="src/Scripts/calculator.js"></script>
 	</head>
 	<body>
 		<header>
