solo qeda arreglar lo del ctrl

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<button id="seven" class="numbers" value="7" data-testid="7" onclick="takeValue(document.getElementById('seven').value)">7</button>
 			<button id="eight" class="numbers" value="8" data-testid="8" onclick="takeValue(document.getElementById('eight').value)">8</button>
 			<button id="nine" class="numbers" value="9" data-testid="9" onclick="takeValue(document.getElementById('nine').value)">9</button>
-			<button class="operators" value="*" id="*" data-testid="*" onclick="highlightOerator(event), takeValue(this.value)">*</button>
+			<button class="operators" value="*" id="*" data-testid="*" onclick="highlightOperator(event), takeValue(this.value)">*</button>
 
 			<button id="zero" class="numbers" value="0" data-testid="0" onclick="takeValue(document.getElementById('zero').value)">0</button>
 			<button id="decimal" value="," data-testid="," onclick="takeValue(this.value)">,</button>
